[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic, 
decentralised, and resilient mesh networking protocol designed for communication over any physical 
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and 
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]

# Protobuf and gRPC
tonic = "0.13.0"
prost = "0.13.5"

# JSON serialization for examples
serde_json = "1.0.119"

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"

rmp = "0.8.14"
serde = { version = "1.0.219", features = ["derive"] }

# Error handling
thiserror = "1.0.69"

# Time handling for logging
chrono = "0.4.38"

# Configuration
toml = "0.8.19"
dirs = "5.0.1"

# Performance monitoring
num_cpus = "1.16.0"

# Logging
log = "0.4.27"
env_logger = "0.10"

# Serial port support (optional)
serialport = { version = "4.3", optional = true }

# MQTT support (optional)
rumqttc = { version = "0.24", optional = true, features = ["use-rustls"] }
tokio-rustls = { version = "0.25", optional = true }
rustls-native-certs = { version = "0.7", optional = true }
webpki-roots = { version = "0.26", optional = true }

# I2P support (optional)
i2p = { version = "0.0.1", optional = true }
i2p_client = { version = "0.2.9", optional = true }

[features]
default = ["alloc"]
alloc = []
fernet-aes128 = []
serial = ["dep:serialport"]
mqtt = ["dep:rumqttc", "dep:tokio-rustls", "dep:rustls-native-certs", "dep:webpki-roots"]
kiss = ["dep:serialport"]
i2p = ["dep:i2p", "dep:i2p_client"]

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
tokio = { version = "1.44.2", features = ["test-util"] }
tempfile = "3.10.2"
quickcheck = "1.0.3"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"

[[example]]
name = "link_client"
path = "examples/link_client.rs"

[[example]]
name = "kaonic_client"
path = "examples/kaonic_client.rs"

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"

[[example]]
name = "kaonic_tcp_mesh"
path = "examples/kaonic_tcp_mesh.rs"

[[example]]
name = "kaonic_mesh"
path = "examples/kaonic_mesh.rs"

[[example]]
name = "serial_client"
path = "examples/serial_client.rs"
required-features = ["serial"]

[[example]]
name = "mqtt_client"
path = "examples/mqtt_client.rs"
required-features = ["mqtt"]

[[example]]
name = "kiss_client"
path = "examples/kiss_client.rs"
required-features = ["kiss"]

[[example]]
name = "config_loader"
path = "examples/config_loader.rs"

[[example]]
name = "i2p_client"
path = "examples/i2p_client.rs"
required-features = ["i2p"]
